# simple_backup

./: PKGBUILD  README.md  config  setup.cfg  setup.py  simple-backup  simple-backup.config  simple-backup.py  simple_backup  simple_backup.conf  simple_backup.config  simple_backup.install  simple_backup.py
man/: simple_backup.1
simple_backup/: __init__.py  simple_backup.conf  simple_backup.py
