[metadata]
name = simple_backup
version = attr: simple_backup.__version__
description = Simple backup script using rsync
long_description = file: README.md
author = Daniele Fucini
author_email = dfucini@gmail.com
license = GPL3
url = https://github.com/Fuxino/simple_backup
classifiers =
   Development Status :: 4 - Beta
   Environment :: Console
   License :: OSI Approved :: GNU General Public License v3 (GPLv3)
   Natural Language :: English
   Operating System :: POSIX :: Linux
   Programming Language :: Python :: 3.10
   Programming Language :: Python :: 3.11
   Programming Language :: Python :: 3.12
   Topic :: System :: Archiving :: Backup

[options]
packages = simple_backup
python_requires = >=3.10
install_requires =
   python-dotenv

[options.extras_require]
JOURNAL =
    systemd-python
NOTIFICATIONS =
    dbus-python
REMOTE =
    paramiko

[options.entry_points]
console_scripts =
   simple_backup = simple_backup.simple_backup:simple_backup

